# rules_groovy

./: .bazelignore  .bazelrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MODULE.bazel  README.md  REPO.bazel  WORKSPACE
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/actions/bazel-cmd/: action.yml
.github/workflows/: ci.yml
docs/: BUILD.bazel  airgapped.md  hermeticity.md  rules-extension.md  rules-public.md  rules-toolchain.md
example/: README.md
example/binary/: BUILD  README.md
example/junit4/: BUILD  README.md
example/junit4/src/main/groovy/calc/: Calc.groovy
example/library_basic/: BUILD  README.md
example/local_sdk/: README.md
example/mixed_jvm/: BUILD  README.md
example/multi_version/: README.md
example/override_url/: README.md
example/rules_jvm_external_interop/: README.md
example/spock/: BUILD  README.md
example/src/main/groovy/app/: BUILD
example/src/main/groovy/lib/: BUILD
examples/binary/: BUILD.bazel  MODULE.bazel  README.md
examples/binary/src/main/groovy/app/: App.groovy
examples/codenarc/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  codenarc.groovy  codenarc.sh
examples/codenarc/src/main/groovy/lib/: Greeter.groovy
examples/custom_version/: BUILD.bazel  MODULE.bazel  README.md
examples/junit4_test/: BUILD.bazel  MODULE.bazel  README.md
examples/junit4_test/src/test/groovy/calc/: CalcTest.groovy
examples/junit5_external/: BUILD.bazel  MODULE.bazel  README.md
examples/junit5_external/src/main/groovy/lib/: Greeter.groovy
examples/junit5_external/src/test/groovy/lib/: GreeterTest.groovy
examples/junit5_test/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json
examples/junit5_test/src/test/groovy/calc/: CalcTest.groovy
examples/local_toolchain/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
examples/long_classpath/: BUILD.bazel  MODULE.bazel  README.md
examples/long_classpath/src/consumer/: Consumer.groovy
examples/maven_dep/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json
examples/maven_dep/src/main/groovy/strings/: Joiner.groovy
examples/maven_dep/src/test/groovy/strings/: JoinerTest.groovy
examples/minimal_library/: BUILD.bazel  MODULE.bazel  README.md
examples/minimal_library/src/main/groovy/greeter/: Greeter.groovy
examples/mixed_jvm/: BUILD.bazel  MODULE.bazel  README.md
examples/mixed_jvm/src/main/groovy/mixed/: Caller.groovy
examples/mixed_jvm/src/main/java/mixed/: Helper.java  JavaCallsGroovy.java
examples/mixed_jvm/src/test/groovy/mixed/: MixedTest.groovy
examples/multi_version/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json
examples/multi_version/src/main/groovy/lib/: Lib.groovy
examples/multi_version/src/test/groovy/lib/: LibTest.groovy
examples/override_url/: BUILD.bazel  MODULE.bazel  README.md
examples/reproducibility/: BUILD.bazel  MODULE.bazel  README.md  golden_jar_sha256.txt
examples/reproducibility/src/main/groovy/hello/: Hello.groovy
examples/spock_test/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json
examples/spock_test/protocol/: BUILD.bazel
examples/spock_test/protocol/src/main/groovy/example/protocol/: Position.groovy
examples/spock_test/protocol/src/test/groovy/example/protocol/: PositionSpec.groovy
examples/spock_test/src/main/groovy/calc/: Calc.groovy
examples/spock_test/src/test/groovy/calc/: CalcSpec.groovy
examples/stdlib_only_test/: BUILD.bazel  MODULE.bazel  README.md
examples/stdlib_only_test/src/test/groovy/stdlib/: StdlibTest.groovy
examples/testing_maven_repo/: BUILD.bazel  MODULE.bazel  README.md
groovy/: BUILD  defs.bzl  extensions.bzl  groovy.bzl  repositories.bzl  toolchain.bzl  toolchains.bzl
groovy/config_settings/: BUILD.bazel
groovy/private/: BUILD  actions.bzl  binary.bzl  groovyc_wrapper.sh  library.bzl  runtime.bzl  test.bzl  toolchain.bzl  versions.bzl
groovy/private/default_toolchain/: BUILD
groovy/private/repositories/: BUILD  artifacts.bzl  hub.bzl  sdk.bzl
groovy/private/repositories/templates/: BUILD  artifacts.BUILD.tpl  local_sdk.BUILD.tpl  sdk.BUILD.tpl
src/test/groovy/lib/: BUILD  GroovyLibTest.groovy
tests/: BUILD  FakeJunit.java  HermeticityFixture.groovy  fake_sdk_marker.txt  groovy_test_test.bzl  hermeticity_test.bzl  path_to_class_test.bzl  toolchain_test.bzl
