"""Groovy Rules for Bazel"""

module(
    name = "rules_groovy",
    # Leave version unset to prevent issues with non-registry overrides.
    # The publish workflow will set this when publishing to BCR.
)

bazel_dep(name = "rules_java", version = "9.6.1")

# rules_shell wraps the bundled `bin/groovyc` POSIX launcher as an
# sh_binary inside the generated SDK repo. The wrapper lives at
# //groovy/private:groovyc_wrapper.sh and is staged into every
# groovy_sdk_repository / groovy_local_sdk_repository.
bazel_dep(name = "rules_shell", version = "0.6.1")

# bazel_skylib is loaded at top-level in `groovy/BUILD`,
# `groovy/private/BUILD`, and `groovy/private/repositories/BUILD` for
# `bzl_library` (which feeds Stardoc under //docs). The bzl_library
# targets themselves are docs-only, but the `load("@bazel_skylib//...")`
# at the top of each BUILD must resolve any time downstream consumers
# evaluate a package in @rules_groovy — i.e. as soon as toolchain
# resolution touches `@rules_groovy//groovy:toolchain_type`. Marking
# this `dev_dependency = True` would break every downstream consumer
# (verified by the new examples/ integration tests in this PR).
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# Stardoc generates the rule reference under //docs from the public .bzl
# docstrings. Chapter 8 of the v0.1.0 release narrative: rule docstrings
# are the source of truth, docs/rules-*.md is committed output, and CI
# fails the PR if the regenerated docs diverge from the committed copy.
# `dev_dependency = True` keeps Stardoc out of downstream module graphs.
bazel_dep(name = "stardoc", version = "0.8.1", dev_dependency = True)

# Chapter 5 of the v0.1.0 release narrative: the module extension owns
# the user-facing API. Three tag classes (`groovy.toolchain`,
# `groovy.local_toolchain`, `groovy.testing`) plus implicit defaults
# make the minimal MODULE.bazel three lines. The extension emits the
# `@groovy_toolchains` hub repo containing one groovy_toolchain +
# toolchain(...) per registered SDK and a `:all` filegroup so
# register_toolchains stays a one-liner regardless of how many SDKs
# the build pins.
groovy = use_extension("//groovy:extensions.bzl", "groovy")

# Since ISSUE-061's cleanup (PR #21), `groovy/groovy.bzl` no longer
# references `@junit_artifact`, `@spock_artifact`, or
# `@groovy_sdk_artifact` by literal label — test rules pull JUnit /
# Spock / SDK jars off the toolchain's `dep_providers`, and
# `groovy_binary` injects the SDK runtime jar via a hidden
# `_groovy_sdk_runtime` helper rule. `groovy_toolchains` is the single
# user-facing repo; everything else stays internal to the extension's
# hub.
use_repo(groovy, "groovy_toolchains")

register_toolchains("@groovy_toolchains//:all")
