"""CodeNarc integration example for rules_groovy.

Consumes `rules_groovy` via `local_path_override` the way every other
`examples/` module does. The point: demonstrate that a plain
`java_binary` running CodeNarc (itself a Groovy program) can put Groovy
on its runtime classpath via the stable `@rules_groovy//groovy:runtime`
label — without depending on Maven pulling a duplicate Groovy through
CodeNarc's transitives. See FINDINGS.md #1 in
`~/dev/ws/example-jenkins-shared-library/` for the original surfacing.
"""

module(name = "rules_groovy_example_codenarc", version = "0.0.0")

bazel_dep(name = "rules_groovy", version = "0.0.0")
local_path_override(
    module_name = "rules_groovy",
    path = "../..",
)

# `java_binary` + `sh_test` + `rules_jvm_external` are the only extra
# rulesets this example needs on top of `rules_groovy` itself.
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_shell", version = "0.6.1")

groovy = use_extension("@rules_groovy//groovy:extensions.bzl", "groovy")
use_repo(groovy, "groovy_toolchains")
register_toolchains("@groovy_toolchains//:all")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.codenarc:CodeNarc:3.7.0",
        "org.gmetrics:GMetrics:2.1.0",
        "org.slf4j:slf4j-api:2.0.13",
        "org.slf4j:slf4j-simple:2.0.13",
    ],
    # CodeNarc 3.7.0 declares its Groovy dep on the legacy
    # `org.codehaus.groovy` groupId (`groovy-ant`, `groovy-xml`,
    # `groovy-templates`, ...). Those sub-modules are used at runtime
    # (Ant FileSet for `-basedir`/`-includes`, XML for the rule
    # discovery, ...), so they have to stay on the classpath. We only
    # exclude the modern `org.apache.groovy:*` umbrella coords so we
    # don't pull a second Groovy 4 from Maven alongside the toolchain's
    # — Groovy enters via `@rules_groovy//groovy:runtime` (the
    # toolchain's resolved SDK jar). The legacy `groovy-3.x` sub-jars
    # do remain on the classpath alongside the toolchain's Groovy 4;
    # that's CodeNarc's own dep graph, not something this label can
    # fix. The win the label delivers is: a plain `java_binary` no
    # longer has to reach into `@groovy_sdk_artifact//:groovy` (the
    # internal repo name) to put the toolchain's Groovy on its runtime
    # classpath.
    excluded_artifacts = [
        "org.apache.groovy:groovy",
        "org.apache.groovy:groovy-all",
    ],
    repositories = ["https://repo1.maven.org/maven2"],
    fetch_sources = False,
    strict_visibility = False,
)
use_repo(maven, "maven")
