load("@rules_groovy//groovy:defs.bzl", "groovy_junit_test", "groovy_library")

groovy_library(
    name = "calc",
    srcs = ["src/main/groovy/calc/Calc.groovy"],
)

# `groovy_junit_test` pins the runner to `org.junit.runner.JUnitCore`.
# The JUnit 4 jar (plus hamcrest-core transitively) comes from
# rules_jvm_external's `maven.install` in MODULE.bazel.
groovy_junit_test(
    name = "CalcTest",
    tests = ["src/test/groovy/calc/CalcTest.groovy"],
    deps = [
        ":calc",
        "@maven//:junit_junit",
    ],
)
