module(name = "rules_groovy_example_junit5_external", version = "0.0.0")

bazel_dep(name = "rules_groovy", version = "0.0.0")
local_path_override(
    module_name = "rules_groovy",
    path = "../..",
)

bazel_dep(name = "rules_jvm_external", version = "7.0")

groovy = use_extension("@rules_groovy//groovy:extensions.bzl", "groovy")

# Disable rules_groovy's built-in test-deps fetching. JUnit 5 jars come
# from the `maven.install` below; the toolchain ships only the Groovy
# SDK. This is the shape v0.1 settles on (δ3 deletes the testing
# extension entirely); this example proves the user-resolved Maven
# path works end-to-end before the breaking change.
groovy.testing(junit = "none", spock = False)

use_repo(groovy, "groovy_toolchains")
register_toolchains("@groovy_toolchains//:all")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.11.0",
        "org.junit.jupiter:junit-jupiter-engine:5.11.0",
        "org.junit.platform:junit-platform-console:1.11.0",
    ],
    lock_file = "//:maven_install.json",
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")
