load("@rules_groovy//groovy:defs.bzl", "groovy_junit5_test", "groovy_library")

groovy_library(
    name = "calc",
    srcs = ["src/main/groovy/calc/Calc.groovy"],
)

# `groovy_junit5_test` compiles against `@groovy_artifacts//:junit_api`
# (the Jupiter API alias the extension exposes when the testing flavor
# resolved to JUnit 5) and runs through
# `org.junit.platform.console.ConsoleLauncher`.
groovy_junit5_test(
    name = "CalcTest",
    tests = ["src/test/groovy/calc/CalcTest.groovy"],
    deps = [":calc"],
)
