load("@rules_groovy//groovy:defs.bzl", "groovy_junit5_test", "groovy_library")

groovy_library(
    name = "calc",
    srcs = ["src/main/groovy/calc/Calc.groovy"],
)

# JUnit 5 deps come from rules_jvm_external's `maven.install` in
# MODULE.bazel. `groovy_junit5_test` pins the runner to
# `org.junit.platform.console.ConsoleLauncher`.
groovy_junit5_test(
    name = "CalcTest",
    tests = ["src/test/groovy/calc/CalcTest.groovy"],
    deps = [
        ":calc",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)
