module(
    name = "rules_groovy_example_long_classpath",
    version = "0.0.0",
)

bazel_dep(name = "rules_groovy", version = "0.0.0")
local_path_override(
    module_name = "rules_groovy",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")

groovy = use_extension("@rules_groovy//groovy:extensions.bzl", "groovy")
use_repo(groovy, "groovy_toolchains")

register_toolchains("@groovy_toolchains//:all")
