load("@rules_groovy//groovy:defs.bzl", "groovy_junit_test", "groovy_library")

# Single library; which Groovy SDK compiles it is decided at
# resolution time by the `groovy_version` build flag. With no flag,
# the toolchain whose `version` equals `DEFAULT_GROOVY_VERSION`
# (currently 4.0.32) wins via its `:is_default`-gated registration.
groovy_library(
    name = "lib",
    srcs = ["src/main/groovy/lib/Lib.groovy"],
    visibility = ["//visibility:public"],
)

# JUnit 4 test on top of `:lib`. Proves the selected Groovy SDK both
# compiles *and* runs end-to-end across all three versions; otherwise
# `bazel test //...` exits with status 4 ("no test targets found") and
# the CI cell never actually exercises the per-version path it claims
# to. See `examples/spock_test/` for the Spock variant on a single
# Groovy major.
groovy_junit_test(
    name = "LibTest",
    tests = ["src/test/groovy/lib/LibTest.groovy"],
    deps = [
        ":lib",
        "@maven//:junit_junit",
    ],
)
