module(
    name = "rules_groovy_example_multi_version",
    version = "0.0.0",
)

bazel_dep(name = "rules_groovy", version = "0.0.0")
local_path_override(
    module_name = "rules_groovy",
    path = "../..",
)

bazel_dep(name = "rules_jvm_external", version = "7.0")

groovy = use_extension("@rules_groovy//groovy:extensions.bzl", "groovy")

# Three SDKs pinned in the same build. The
# `@rules_groovy//groovy/config_settings:groovy_version` build flag
# disambiguates at resolution time:
#
#   bazel test //...                                                    # default 4.0.32
#   bazel test --@rules_groovy//groovy/config_settings:groovy_version=3.0.25 //...
#   bazel test --@rules_groovy//groovy/config_settings:groovy_version=2.5.23 //...
groovy.toolchain(
    name = "groovy2",
    version = "2.5.23",
)
groovy.toolchain(
    name = "groovy3",
    version = "3.0.25",
)
groovy.toolchain(
    name = "groovy4",
    version = "4.0.32",
)
use_repo(
    groovy,
    "groovy_toolchains",
)

register_toolchains("@groovy_toolchains//:all")

# JUnit 4 is chosen over JUnit 5 because each Groovy SDK distribution
# bundles its own copy of the JUnit 5 Platform jars under `lib/` —
# 2.5 ships Platform 1.4.2, 3.0 ships 1.12.0, 4.0 ships 1.13.3 — and
# those SDK-bundled jars collide with any user-pinned Platform version
# at launch time. JUnit 4 has no such drift: all three SDKs bundle
# `junit-4.13.2.jar`, so the user-pinned JUnit 4 matches.
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = ["junit:junit:4.13.2"],
    lock_file = "//:maven_install.json",
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")
